tests/fixtures/invalid/divmod_bytes_dict.py
# Cannot call divmod() with Bytes, Dict[str, int]
x = divmod(b"hello", {"a": 1})
